# KianaFS

./: .gitignore  Dockerfile  README.md  README_zh.md  app.py  main.py  models.py  pyproject.toml  requirements.txt  utils.py
db/: __init__.py  cache.py  conf.py  schema.py
drivers/: __init__.py  alist.py  ftp.py  local.py  s3.py  webdav.py
views/: __init__.py  chunk.py  files.py  storage.py  user.py
webui/: README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
webui/src/: App.vue  cfg.ts  main.ts  utils.ts
webui/src/assets/: main.css
webui/src/components/: ThemeManager.vue
webui/src/router/: index.ts
webui/src/views/: LoginView.vue
