[project]
name = "dfs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.21.0",
    "click>=8.1.8",
    "fastapi>=0.115.11",
    "python-multipart>=0.0.20",
    "tortoise-orm>=0.24.2",
    "uvicorn>=0.34.0",
]

[project.optional-dependencies]
s3 = ["boto3>=1.37.7"]
alist = ["alist3>=1.3.6"]
sqlite = ["aiosqlite>=0.21.0"]
fast = ["uvloop>=0.21.0", "orjson>=3.10.15", "httptools>=0.6.4"]
