[project]
name = "KianaFS"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.8",
    "fastapi>=0.115.11",
    "pyjwt>=2.10.1",
    "python-multipart>=0.0.20",
    "tortoise-orm>=0.24.2",
    "uvicorn>=0.34.0",
    "xxhash>=3.5.0",
    "aiofiles>=24.1.0",
    "orjson>=3.10.15",
]

[project.optional-dependencies]
s3 = ["miniopy-async>=1.21.1"]
alist = ["alist3>=1.3.6"]
ftp = ["aioftp"]
sqlite = ["aiosqlite>=0.21.0"]
mysql = ["aiomysql>=0.2.0"]
postgresql = ["asyncpg>=0.30.0"]

fast = [
    "uvloop>=0.21.0",
    "httptools>=0.6.4",
    "ciso8601>=2.3.2",
]
